# ic-memory

./: .gitignore  ADVANCED.md  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SAFETY.md
.github/workflows/: ci.yml
docs/audits/: wasm-codec-size-2026-07-14.md
fixtures/current/: README.md  dual_slot_store_corrupt_newer.cbor.hex  dual_slot_store_valid_newer.cbor.hex  empty_genesis_payload_envelope.hex  ledger_commit_store_single_active.cbor.hex  memory_manager_descriptor.cbor.hex  reserved_allocation_payload_envelope.hex  retired_allocation_payload_envelope.hex  single_active_allocation_payload_envelope.hex  stable_cell_record.cbor.hex
fixtures/v1/: README.md  dual_slot_store_corrupt_newer.cbor.hex  dual_slot_store_valid_newer.cbor.hex  empty_genesis_payload_envelope.hex  ledger_commit_store_single_active.cbor.hex  memory_manager_descriptor.cbor.hex  reserved_allocation_payload_envelope.hex  retired_allocation_payload_envelope.hex  single_active_allocation_payload_envelope.hex  stable_cell_record.cbor.hex
src/: bootstrap.rs  capability.rs  cbor.rs  constants.rs  declaration.rs  diagnostics.rs  key.rs  lib.rs  physical.rs  policy.rs  registry.rs  runtime.rs  schema.rs  session.rs  slot.rs  stable_cell.rs  substrate.rs  validation.rs
src/generation/: mod.rs
src/ledger/: claim.rs  error.rs  integrity.rs  mod.rs  payload.rs  record.rs  stage.rs
src/slot/: descriptor.rs  memory_manager.rs  mod.rs  range_authority.rs
tests/: compile_fail.rs  runtime_macros.rs
tests/ui/: fabricate_allocation_records.rs  fabricate_allocation_records.stderr  fabricate_committed_allocations.rs  fabricate_committed_allocations.stderr  fabricate_recovered_ledger.rs  fabricate_recovered_ledger.stderr  fabricate_validated_allocations.rs  fabricate_validated_allocations.stderr  implicit_authority_macro_forms.rs  implicit_authority_macro_forms.stderr  open_with_precommit_allocations.rs  open_with_precommit_allocations.stderr
whitepaper/: book.toml  flake.nix  ic-memory.tex
whitepaper/lean/: IcMemory.lean  lakefile.lean
whitepaper/src/: SUMMARY.md  durable-commit.md  introduction.md  invariants.md  lean-model.md  (+5 more)
(+3 files in other folders)
